--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Type: Package
-Package: scoreHCA
+Package: singscoreHCA
 Title: test transcriptomic signatures on the Human Cell Atlas
 Version: 0.1.0
 Authors@R: c(person("Stefano", "Mangiola", email = "mangiolastefano@gmail.com",
@@ -34,5 +34,5 @@ biocViews: AssayDomain, Infrastructure, RNASeq, DifferentialExpression, GeneExpr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
-URL: https://github.com/stemangiola/scoreHCA, https://stemangiola.github.io/scoreHCA/
-BugReports: https://github.com/stemangiola/scoreHCA/issues
+URL: https://github.com/stemangiola/singscoreHCA, https://stemangiola.github.io/singscoreHCA/
+BugReports: https://github.com/stemangiola/singscoreHCA/issues
